--- a/litblogs/index.html
+++ b/litblogs/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/x-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Content Security Policy: allow required auth and font sources -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https://*.googleusercontent.com; connect-src 'self' http://localhost:8000 https://accounts.google.com https://login.microsoftonline.com https://graph.microsoft.com; frame-src 'self' https://accounts.google.com https://login.microsoftonline.com;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https://*.googleusercontent.com https://images.unsplash.com; connect-src 'self' http://localhost:8000 https://accounts.google.com https://login.microsoftonline.com https://graph.microsoft.com; frame-src 'self' https://accounts.google.com https://login.microsoftonline.com;">
+  <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     <title>LitBlogs | CIT Made</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
